# surrogate

./: .gitignore  README.md
surrogate/app/: embeddings.py  main.py  models.py  routes.py
surrogate/backend/: pyproject.toml
surrogate/backend/app/: embeddings.py  main.py  routes.py
surrogate/backend/static/: scripts.js  styles.css
surrogate/static/: index.html  scripts.js  styles.css
